--- a/unit_02/beamer/unitat_02.tex
+++ b/unit_02/beamer/unitat_02.tex
@@ -4,10 +4,14 @@
 \title{Al-Andalus}
 \date{\today}
 \author{Alfons Rovira}
-\institute{Alumnant IES Lluís Simarro, Xàtiva}
+\institute{http://llagosti.wordpress.com}
+
 \begin{document}
+
   \maketitle
+
   \section{0. Introducció}
+
   \begin{frame}{Introducció}
   
      \begin{itemize}[<+-| alert@+>]
@@ -17,4 +21,51 @@
         \item Al llarg del temps aquest territori va estar conquestat pels reis cristians que romanien al nord de la Península.
      \end{itemize}
   \end{frame}
+
+  \section{1. Expansió de l'Islam}
+  \begin{frame}{1. Expansió de l'Islam}
+
+Moguts pel desig de difondre lla seua nova religió, els musulmans van aprofitar la feblesa dels imperio veïns per a dur a terme una \textbf{expansió militar}.
+   
+  \begin{itemize}
+  \itemsep1pt\parskip0pt\parsep0pt
+  \item Segle VII: S'enfronten a l'imperi Bizantí.
+  \item Segle VIII: Assegten fins a Constantinoble, però no van poder conquistar-la.
+  \item Segle IX: S'expandeixen per Sud d'Egipte i centre l'Itàlia.
+
+  \end{itemize}
+
+  \end{frame}
+
+  \section{1.1. Etapes}\label{etapes}
+  \begin{frame}{1.1. Etapes}
+
+  \begin{itemize}
+     \itemsep1pt\parskip0pt\parsep0pt
+     \item  \textbf{Primers califes} (632-661): \textbf{xiites} (el califa havia  d'ésser descendent de Mahoma), \textbf{sunnites} (pensaven que havia  d'ésser escollit d'entre els millors creients).
+      \item  \textbf{Disnastia omeia} (661-750): Instal·lats a Damasc, gran  expansió per la península Ibèrica.
+      \item  \textbf{Dinastia abbassida} (750-1258): Van derrotar els omeies i  instal·len la capital a Bagdad.
+      \item  \textbf{Turcs}: En 1453 van conquistar Constantinoble.
+
+   \end{itemize}
+
+   \end{frame}
+
+
+   \section{2. Explendor econòmica i cultural}\label{explendor-econuxf2mica-i-cultural}
+
+   \begin{frame}{2.Explendor econòmica i cultural}
+   	
+  \begin{itemize}
+
+    \itemsep1pt\parskip0pt\parsep0pt
+
+    \item  Llengua oficial de l'imperi: \textbf{l'àrab}.
+    \item  Els avantatges econòmics i culturals que va gaudir  l'\textbf{islamització} va afavorir la seua expansió.
+    \item  L'imperi es va omplir de \textbf{noves ciutats}, que eren centres  religiosos, polítics, econòmics i culturals.
+    \item  A les ciutats es varen crear: Escoles, bibliloteques i centres de  traductors.
+  \end{itemize}
+
+   \end{frame}
+
 \end{document}
