--- a/unit_02/md/01_expansio.tex
+++ b/unit_02/md/01_expansio.tex
@@ -1,47 +1,27 @@
-\documentclass{beamer}
-\usepackage[utf8]{inputenc}
-\usetheme{metropolis}           % Use metropolis theme
-\title{Al-Andalus}
-\date{\today}
-\author{Alfons Rovira}
-\institute{http://llagosti.wordpress.com}
-\begin{document}
-  \maketitle
-  \section{0. Introducció}
-  \begin{frame}{Introducció}
-  
-     \begin{itemize}[<+-| alert@+>]
-        \item Segle VII: Els mulusmans iniciarn un procés d'expació i conquistaren un gra imperi.
-        \item 711 - 1492: La debilitat del regne visigòtic va permetre que els musulmans entraren en la península i es quedaren llarg temps.
-        \item El territori ocupat rep el nom d'Al-Andalus, comprén la major part de la Península.
-        \item Al llarg del temps aquest territori va estar conquestat pels reis cristians que romanien al nord de la Península.
-     \end{itemize}
-  \end{frame}
+\section{Expansió de l'Islam}\label{expansiuxf3-de-lislam}
 
-  \section{1. Expansió de l'Islam}
-  \begin{frame}{1. Expansió de l'Islam}
+\subsection{Motivació}\label{motivaciuxf3}
 
 Moguts pel desig de difondre lla seua nova religió, els musulmans van
 aprofitar la feblesa dels imperio veïns per a dur a terme una
 \textbf{expansió militar}.
-   \end{frame}
-   
-     \begin{frame}{1. Expansió de l'Islam}
-   
-  \begin{itemize}
-  \itemsep1pt\parskip0pt\parsep0pt
-  \item
+
+\subsection{Fases}\label{fases}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
   Segle VII: S'enfronten a l'imperi Bizantí.
-  \item
+\item
   Segle VIII: Assegten fins a Constantinoble, però no van poder
   conquistar-la.
-  \item
+\item
   Segle IX: S'expandeixen per Sud d'Egipte i centre l'Itàlia.
-  \end{itemize}
-   \end{frame}
+\end{itemize}
+
+\section{Organització}\label{organitzaciuxf3}
 
 \subsection{Etapes}\label{etapes}
-     \begin{frame}{Fases}
 
 \begin{itemize}
 \itemsep1pt\parskip0pt\parsep0pt
@@ -58,7 +38,6 @@ aprofitar la feblesa dels imperio veïns per a dur a terme una
 \item
   \textbf{Turcs}: En 1453 van conquistar Constantinoble.
 \end{itemize}
-\end{frame}
 
 \section{Explendor econòmica i
 cultural}\label{explendor-econuxf2mica-i-cultural}
@@ -79,4 +58,3 @@ cultural}\label{explendor-econuxf2mica-i-cultural}
   A les ciutats es varen crear: Escoles, bibliloteques i centres de
   traductors.
 \end{itemize}
-\end{document}
