--- a/unit_02/beamer/unitat_02.tex
+++ b/unit_02/beamer/unitat_02.tex
@@ -1,71 +1,177 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Beamer Presentation
+% LaTeX Template
+% Version 1.0 (10/11/12)
+%
+% This template has been downloaded from:
+% http://www.LaTeXTemplates.com
+%
+% License:
+% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%----------------------------------------------------------------------------------------
+%PACKAGES AND THEMES
+%----------------------------------------------------------------------------------------
+
 \documentclass{beamer}
+
 \usepackage[utf8]{inputenc}
-\usetheme{metropolis}           % Use metropolis theme
-\title{Al-Andalus}
-\date{\today}
-\author{Alfons Rovira}
-\institute{http://llagosti.wordpress.com}
+
+\mode<presentation> {
+
+% The Beamer class comes with a number of default slide themes
+% which change the colors and layouts of slides. Below this is a list
+% of all the themes, uncomment each in turn to see what they look like.
+
+%\usetheme{default}
+%\usetheme{AnnArbor}
+%\usetheme{Antibes}
+%\usetheme{Bergen}
+%\usetheme{Berkeley}
+%\usetheme{Berlin}
+%\usetheme{Boadilla}
+%\usetheme{CambridgeUS}
+%\usetheme{Copenhagen}
+%\usetheme{Darmstadt}
+%\usetheme{Dresden}
+%\usetheme{Frankfurt}
+%\usetheme{Goettingen}
+%\usetheme{Hannover}
+%\usetheme{Ilmenau}
+%\usetheme{JuanLesPins}
+%\usetheme{Luebeck}
+\usetheme{Madrid}               % Use Madrid theme
+%\usetheme{Malmoe}
+%\usetheme{Marburg}
+%\usetheme{Montpellier}
+%\usetheme{PaloAlto}
+%\usetheme{Pittsburgh}
+%\usetheme{Rochester}
+%\usetheme{Singapore}
+%\usetheme{Szeged}
+%\usetheme{Warsaw}
+%\usetheme{metropolis}           % Use metropolis theme
+
+% As well as themes, the Beamer class has a number of color themes
+% for any slide theme. Uncomment each of these in turn to see how it
+% changes the colors of your current slide theme.
+
+%\usecolortheme{albatross}
+%\usecolortheme{beaver}
+%\usecolortheme{beetle}
+%\usecolortheme{crane}
+%\usecolortheme{dolphin}
+%\usecolortheme{dove}
+%\usecolortheme{fly}
+%\usecolortheme{lily}
+%\usecolortheme{orchid}
+%\usecolortheme{rose}
+%\usecolortheme{seagull}
+%\usecolortheme{seahorse}
+%\usecolortheme{whale}
+%\usecolortheme{wolverine}
+
+
+%\setbeamertemplate{footline} % To remove the footer line in all slides uncomment this line
+%\setbeamertemplate{footline}[page number] % To replace the footer line in all slides with a simple slide count uncomment this line
+
+%\setbeamertemplate{navigation symbols}{} % To remove the navigation symbols from the bottom of all slides uncomment this line
+}
+
+\usepackage{graphicx} % Allows including images
+\usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
+
+%----------------------------------------------------------------------------------------
+%TITLE PAGE
+%--------------------------------------	--------------------------------------------------
+
+\title[Short title]{Al-Andalus} % The short title appears at the bottom of every slide, the full title is only on the title page
+
+\author{Alfons Rovira} % Your name
+\institute[Llagostí] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
+{
+https://llagosti.wordpress.com \\ % Your institution for the title page
+\medskip
+}
+\date{\today} % Date, can be changed to a custom date
 
 \begin{document}
 
-  \maketitle
+\begin{frame}
+\titlepage % Print the title page as the first slide
+\end{frame}
 
-  \section{0. Introducció}
 
-  \begin{frame}{Introducció}
+\begin{frame}
+\frametitle{Overview} % Table of contents slide, comment this block out to remove it
+\tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
+\end{frame}
+
+%----------------------------------------------------------------------------------------
+%PRESENTATION SLIDES
+%----------------------------------------------------------------------------------------
+
+
+\section{0. Introducció}
+
+\begin{frame}{Introducció}
   
-     \begin{itemize}[<+-| alert@+>]
+\begin{itemize}[<+-| alert@+>]
         \item Segle VII: Els mulusmans iniciarn un procés d'expació i conquistaren un gra imperi.
         \item 711 - 1492: La debilitat del regne visigòtic va permetre que els musulmans entraren en la península i es quedaren llarg temps.
         \item El territori ocupat rep el nom d'Al-Andalus, comprén la major part de la Península.
         \item Al llarg del temps aquest territori va estar conquestat pels reis cristians que romanien al nord de la Península.
-     \end{itemize}
-  \end{frame}
+\end{itemize}
 
-  \section{1. Expansió de l'Islam}
-  \begin{frame}{1. Expansió de l'Islam}
+\end{frame}
+
+\section{1. Expansió de l'Islam}
+
+\begin{frame}{1. Expansió de l'Islam}
 
 Moguts pel desig de difondre lla seua nova religió, els musulmans van aprofitar la feblesa dels imperio veïns per a dur a terme una \textbf{expansió militar}.
    
-  \begin{itemize}
+\begin{itemize}
+
   \itemsep1pt\parskip0pt\parsep0pt
   \item Segle VII: S'enfronten a l'imperi Bizantí.
   \item Segle VIII: Assegten fins a Constantinoble, però no van poder conquistar-la.
   \item Segle IX: S'expandeixen per Sud d'Egipte i centre l'Itàlia.
 
-  \end{itemize}
+\end{itemize}
 
-  \end{frame}
+\end{frame}
 
-  \section{1.1. Etapes}\label{etapes}
-  \begin{frame}{1.1. Etapes}
+\subsection{1.1. Etapes}\label{etapes}
 
-  \begin{itemize}
+\begin{frame}{1.1. Etapes}
+
+\begin{itemize}
      \itemsep1pt\parskip0pt\parsep0pt
      \item  \textbf{Primers califes} (632-661): \textbf{xiites} (el califa havia  d'ésser descendent de Mahoma), \textbf{sunnites} (pensaven que havia  d'ésser escollit d'entre els millors creients).
       \item  \textbf{Disnastia omeia} (661-750): Instal·lats a Damasc, gran  expansió per la península Ibèrica.
       \item  \textbf{Dinastia abbassida} (750-1258): Van derrotar els omeies i  instal·len la capital a Bagdad.
       \item  \textbf{Turcs}: En 1453 van conquistar Constantinoble.
-
    \end{itemize}
 
    \end{frame}
 
 
-   \section{2. Explendor econòmica i cultural}\label{explendor-econuxf2mica-i-cultural}
+\section{2. Explendor econòmica i cultural}\label{explendor-econuxf2mica-i-cultural}
 
-   \begin{frame}{2.Explendor econòmica i cultural}
+\begin{frame}{2.Explendor econòmica i cultural}
    	
-  \begin{itemize}
+\begin{itemize}
 
-    \itemsep1pt\parskip0pt\parsep0pt
-
+\itemsep1pt\parskip0pt\parsep0pt
     \item  Llengua oficial de l'imperi: \textbf{l'àrab}.
     \item  Els avantatges econòmics i culturals que va gaudir  l'\textbf{islamització} va afavorir la seua expansió.
     \item  L'imperi es va omplir de \textbf{noves ciutats}, que eren centres  religiosos, polítics, econòmics i culturals.
     \item  A les ciutats es varen crear: Escoles, bibliloteques i centres de  traductors.
-  \end{itemize}
+\end{itemize}
 
-   \end{frame}
+\end{frame}
 
 \end{document}
