Creada recopil·lació de música en pdf

--- a/05_mu/md/01_ud01.md
+++ b/05_mu/md/01_ud01.md
@@ -1,20 +1,36 @@
-% Música 2 ESO - UD 1 Atrapar la música
-% Llagostí
+% 2 ESO Música
+% Alfons Rovira
 % Octubre 2016
 
-# 0. Introducció
+\newpage
+
+# Prefaci
+
+Aquest document ha estat produit per tal de facilitar l'estudi de l'assignatura de música de 2n d'ESO. Consta de recopilació d'una d'informació per tal de memoritzar millor el temari.
+
+<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Llicència de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+
+![](cc.jpg)
+
+Aquesta obra està subjecta a una llicència de <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Reconeixement 4.0 Internacional de Creative Commons</a>
+
+\newpage
+
+# Unitat Didàctica 1
+
+## 0. Introducció
 
 **Notació**: Codi que permet representar la música en un paper. Segle X.
 
 **Fonografia**: Gravació i reproducció mecànica d'un so. Segle XX.
 
-# 1. Escriptura del so
+## 1. Escriptura del so
 
 Les cultures musicals de la majoria de països del món són **àgrafes**, és a dir, no escriuen els son musicals sobre el paper.
 
 La **notación musical** és el resultat d'j procés que es va prolongar durant un cinc cegles, del X al XV. La notació fa possible intermpretar i analitzar obres compostes fa segles.
 
-## Característiques del so
+### Característiques del so
 
 El **so** és una vibració que es transmet a través de l'aire en forma d'ona.
 
@@ -27,7 +43,6 @@ El so musical es caracteritza per quatre **paràmetres** i una sèrie de **quali
 | Intensitat | Fort o suau |
 | Timbre | So caracerístic de l'instrument |
 
-![Característiques](image01.jpg)
 
 ## 2. La interpretació expressiva
 
@@ -48,4 +63,13 @@ Després de l'arribada de la tecnologia digital, els recursos que s'han posat al
 - **Gravadors**: dispositius per capturar el so.
 - **Reproductors de so**: dispositius per reproduir el so.
 
+## 5. Analitzar els llenguatges per a representar sons
+
+Les **partitutes** són representacions gràfieques de la música.
+
+Proporcionen informació sobre:
+
+- Els **sons** que componen una determinada peça,
+- Les **qualitats** d'aquests sons,
+- Deixen **pautes** per interpretar-la.
 
