Música correcció faltes d'ortografia

--- a/05_mu/md/01_ud01.md
+++ b/05_mu/md/01_ud01.md
@@ -48,7 +48,7 @@ El so musical es caracteritza per quatre **paràmetres** i una sèrie de **quali
 
 En la interpretació sempre hi ha alguna cosa nova o imprevista.
 
-> Les **progressions melòdiques** són tènciques de construcció motiviques que consisteixen en prendre un model de més d’un element (melòdic o melòdic-harmònic) i repetir-lo pujant i baixant certs intervals.
+> Les **progressions melòdiques** són tècniques de construcció motiviques que consisteixen en prendre un model de més d’un element (melòdic o melòdic-harmònic) i repetir-lo pujant i baixant certs intervals.
 
 ## 3. Al·leluia, de Georg Friederich Häendel
 
@@ -60,12 +60,12 @@ Després de l'arribada de la tecnologia digital, els recursos que s'han posat al
 
 - **Generadors de sons**: sintetitzadors.
 - **Processadors d'audio**: software.
-- **Gravadors**: dispositius per capturar el so.
+- **Grabadors**: dispositius per capturar el so.
 - **Reproductors de so**: dispositius per reproduir el so.
 
 ## 5. Analitzar els llenguatges per a representar sons
 
-Les **partitutes** són representacions gràfieques de la música.
+Les **partitutes** són representacions gràfiques de la música.
 
 Proporcionen informació sobre:
 
