--- a/05_mu/md/02_ud02.md
+++ b/05_mu/md/02_ud02.md
@@ -7,14 +7,20 @@
 ### Cronologia
 
 1877 - Fonògraf: Tomas Alba Edison
-1887 - Gramòfon: Emile Berliner
-1920 - Amplificació elèctrica i el micròfon
-1945 - Long Play, disc de vinil
-1958 - Gravacions estereofòniques
-1963 - Cassets
-1982 - Gravacions digitals, CD
 
-## 1. Gravar la nostra música
+1887 - Gramòfon: Emile Berliner
+
+1920 - Amplificació elèctrica i el micròfon
+
+1945 - Long Play, disc de vinil
+
+1958 - Grabacions estereofòniques
+
+1963 - Cassets
+
+1982 - Grabacions digitals, CD
+
+## 1. Grabar la nostra música
 
 ### Aspectes tècnics
 
@@ -30,13 +36,13 @@ Cal tenir en compte:
 - **Tempo**: velocitat.
 - **Ritme**: distintes durades que es donen.
 
-## 2. Improvisar i gravar
+## 2. Improvisar i grabar
 
 La improvisacio és la base de molts estils musicals del passat i del present.
 
 **Improvisar** és inventar la música sobre la marxa, alhora que s'interpreta.
 
-La improvisació és una cosa **efímera**, és a dir, fugaç i difícil de reproduir, gravar-la ens pot ser de gran utilitat.
+La improvisació és una cosa **efímera**, és a dir, fugaç i difícil de reproduir, grabar-la ens pot ser de gran utilitat.
 
 ## 3. Potato head blues, de Louis Armstrong
 
@@ -46,13 +52,13 @@ La improvisació és una cosa **efímera**, és a dir, fugaç i difícil de repr
 
 ### Seqüenciadors
 
-Un **seqüenciador** és un programa infromàtic amb què un únic compositor-intérpret pot crear, gravar, reproduir i editar una peça musical.
+Un **seqüenciador** és un programa informàtic amb què un únic compositor-intérpret pot crear, grabar, reproduir i editar una peça musical.
 
 És possible bravar sons sense tocar cap instrument ni cantar. Cal combinar els **samples**, *mostres sonores* que consisteixen en fragments rítmics, melòdics o harmònics ja preparats per fer-los servir en qualsevol gravació.
 
 ### Treballar amb un seqüenciador
 
-- **Gravar**: El músic enregistra cada instrument en una **pista**.
+- **Grabar**: El músic enregistra cada instrument en una **pista**.
 - **Editar**: Modificació de la pista.
 - **Mesclar**: Pistes agrupades en una única audició final. Ajustar el volum, l'equalització (igualar sonoritats dels instruments), el panoràmic (per a determinar què s'escoltarà pel canal dret i esquerre), agregar efectes sonors, etc.
 
@@ -62,7 +68,7 @@ Crear música a través d'internet.
 
 ## 5. Dissenyar un estudi de gravació
 
-Un **estudi de gravació** és una instal·lació disssenyada perquè es puga fer-hi tota mena de gravacions de so.
+Un **estudi de grabació** és una instal·lació dissenyada perquè es puga fer-hi tota mena de grabacions de so.
 
 Requereix unes condicions acústiques especials:
 
