--- a/05_mu/md/03_ud03.md
+++ b/05_mu/md/03_ud03.md
@@ -5,7 +5,9 @@
 ## 0. Introducció
 
 1906 - **Ràdio**: Va començar la transmissió sense restriccions de la música.
+
 1956 - **Televisió**: Ha utitilitzat la música en els seus programes des del principi.
+
 1990 - **Internet**: Generalització de la música al mercat domèstic.
 
 ## 1. La música i la publicitat
@@ -33,7 +35,7 @@ La publicitat utilitza la música amb aquesta intencionalitat:
 
 ## 2. Sintonies i bandes sonores
 
-Dansa. Els vals
+### Dansa. Els vals
 
 El **vals** és una dansa que utilitza el compas de **3/4** com a caracerística essencial.
 
