Depuració ortogràfica Música PDF 2ESO

--- a/05_mu/md/01_ud01.md
+++ b/05_mu/md/01_ud01.md
@@ -22,13 +22,13 @@ Aquesta obra està subjecta a una llicència de <a rel="license" href="http://cr
 
 **Notació**: Codi que permet representar la música en un paper. Segle X.
 
-**Fonografia**: Gravació i reproducció mecànica d'un so. Segle XX.
+**Fonografia**: Grabació i reproducció mecànica d'un so. Segle XX.
 
 ## 1. Escriptura del so
 
 Les cultures musicals de la majoria de països del món són **àgrafes**, és a dir, no escriuen els son musicals sobre el paper.
 
-La **notación musical** és el resultat d'j procés que es va prolongar durant un cinc cegles, del X al XV. La notació fa possible intermpretar i analitzar obres compostes fa segles.
+La **notación musical** és el resultat del procés que es va prolongar durant un cinc segles, del X al XV. La notació fa possible interpretar i analitzar obres compostes fa segles.
 
 ### Característiques del so
 
@@ -38,10 +38,10 @@ El so musical es caracteritza per quatre **paràmetres** i una sèrie de **quali
 
 | Paràmetres | Qualitats |
 | --- | --- |
-| Altura | Agut o greu |
-| Durada | Llarg o curt |
-| Intensitat | Fort o suau |
-| Timbre | So caracerístic de l'instrument |
+| **A**ltura | Agut o greu |
+| **D**urada | Llarg o curt |
+| **I**ntensitat | Fort o suau |
+| **T**imbre | So caracerístic de l'instrument |
 
 
 ## 2. La interpretació expressiva
