--- a/05_mu/md/03_ud03.md
+++ b/05_mu/md/03_ud03.md
@@ -47,10 +47,10 @@ El **vals de les flors** pertany al primer dels dos actes del popular ballet *El
 
 ### Funcions dels mitjans
 
-- Informar
-- Entretindre
-- Educar
-- Formar opinió
+- **I**nformar
+- **E**ntretindre
+- **E**ducar
+- **F**ormar opinió
 
 \newpage
 
@@ -67,4 +67,4 @@ Segons els tipus d'esdeveniments, la múcisa té una funció en un context deter
 
 ## 5. Escriure una crítica musical
 
-La **crítica** és un tipus de redacció en què l'autor expressa la seua opinió, és a dir, fa una valoració personal sobre una manifestació artística (una exposició, una pel·lícula de cine, un concert, una estrena teatral...). Solen ser escrites per professionals en cada una de les arts.
+La **crítica** és un tipus de redacció en què l'autor *expressa la seua opinió*, és a dir, fa una *valoració personal* sobre una manifestació artística (una exposició, una pel·lícula de cine, un concert, una estrena teatral...). Solen ser escrites per professionals en cada una de les arts.
