--- a/05_mu/md/04_ud04.md
+++ b/05_mu/md/04_ud04.md
@@ -8,9 +8,8 @@ L'orquestra com a conjunt permanent s'estableix a partir del segle XVIII.
 
 L'orquestra moderna agrupa els instruments per famílieso seccions. Aquestes seccions són quatre:
 
-- Corda
-- Vent de fusta
-- Vent de metall
+- Corda: fregada i percutida.
+- Vent: de fusta i de metall.
 - Percusió
 
 \newpage
@@ -19,21 +18,21 @@ L'orquestra moderna agrupa els instruments per famílieso seccions. Aquestes sec
 
 La diferència entre un bon i un mal intèrpret també es pot apreciar en la capacitat que té per distingir **matissos** d'intensitat entre els passatges d'una obra.
 
-Utilitzem els matissos per mostra la intensitat dels sons.
+Utilitzem els **matissos** per mostra la **intensitat** dels sons.
 
-El matís s'escriu davall  el pentagrama i s'indica utilitzant termes italians. Quan es pretén que la intensitat canvie de forma gradual, s'indica mitjançant els reguladors.
+El matís s'escriu davall el pentagrama i s'indica utilitzant termes italians. Quan es pretén que la intensitat canvie de forma gradual, s'indica mitjançant els reguladors.
 
-- Crescendo: augmenta la intensitat.
-- Diminuendo: disminueix la intensitat.
-- Doble regulador: varia gradualment.
+- **Crescendo**: augmenta la intensitat.
+- **Diminuendo**: disminueix la intensitat.
+- **Doble regulador**: varia gradualment.
 
 Matisos principals:
 
-- Fortíssimo
-- Forte
-- Mezzoforte
-- Piano
-- Pianísimo
+- **F**ortíssimo
+- **F**orte
+- **M**ezzoforte
+- **P**iano
+- **P**ianísimo
 
 \newpage
 
@@ -53,11 +52,11 @@ Antigament, el procés de transcripció costava molt. Mentre arribaven les parti
 
 Un **editor de partitures** permet escriure música. Una vegada creada es poden realitzar tota mena de funcions d'edició, visualització, reproducció i impressió, així com generar formats compatibles amb altres programes.
 
-Es poden publicar en una pàgina web o en un blog.
+Es poden publicar en una pàgina **web** o en un **blog**.
 
-També, la partitura pot haver estat creada col·lectivament per un grup de persones.
+També, la partitura pot haver estat **creada col·lectivament** per un grup de persones.
 
-A intenet es poden trobar partitures de molts tipus, des d'una tablatura de guitarra a una obra simfònica.
+A **intenet** es poden trobar partitures de molts tipus, des d'una tablatura de guitarra a una obra simfònica.
 
 \newpage
 
