--- a/05_mu/md/02_ud02.md
+++ b/05_mu/md/02_ud02.md
@@ -66,7 +66,7 @@ Un **seqüenciador** és un programa informàtic amb què un únic compositor-in
 
 Crear música a través d'internet.
 
-## 5. Dissenyar un estudi de gravació
+## 5. Dissenyar un estudi de grabació
 
 Un **estudi de grabació** és una instal·lació dissenyada perquè es puga fer-hi tota mena de grabacions de so.
 
