--- a/05_mu/md/03_ud03.md
+++ b/05_mu/md/03_ud03.md
@@ -12,7 +12,7 @@
 
 ## 1. La música i la publicitat
 
-Des de l'inici de les emissions es fa servir la música en sintoníes d'obertura i tancament de programres, falques, fons musicals i publicitaris.
+Des de l'inici de les emissions es fa servir la música en sintoníes d'obertura i tancament de programes, falques, fons musicals i publicitaris.
 
 La publicitat utilitza la música amb aquesta intencionalitat:
 
