Fins a la unitat 6

--- a/05_mu/md/06_ud06.md
+++ b/05_mu/md/06_ud06.md
@@ -15,7 +15,7 @@ La major part de les cançons tradicionals estan relacionades amb les estacions 
 Entre les més freqüents hi ha:
 
 - Cançons de treball
-- romanços arratius
+- Romanços narratius
 - Cançons de bressol
 - Cançons de noces
 - Cançons amoroses
@@ -27,3 +27,24 @@ L'**anacrussi** es producix quan la música comença abans de la primera pulsaci
 
 
 \newpage
+
+## 2. La música tradicional com a font d'inspiració
+
+La música tradicional ha sigut unafont d'inspiració per a la música classica. Entre la darreria del segle XIX i el començament del segle XX l'escola de composició anomenada **nacionalista** predominava en molts països d'Europa.
+
+Hui dia, molt músics s'esforcen a renovar la tradició i adaptar-la al present, utilizant instruments i tècniques actuals, d'això se'n diu **música folk**.
+
+
+### Signes de prolongació sobre fraccions
+
+Els signes de prolongació són la **ligadura** i el **punt**.
+
+\newpage
+
+## 3. Canción, de Manuel de Falla
+
+## 4. Música a la carta
+
+- Ràdio en línia: escoltar la ràdio en directe per interent.
+- Streamming: escoltar sense necessitat de baixar l'arxiu.
+- Llistes de reproducció: establir una ruta de reproducció d'arxius.
