--- a/05_mu/md/03_ud03.md
+++ b/05_mu/md/03_ud03.md
@@ -23,6 +23,8 @@ La publicitat utilitza la música amb aquesta intencionalitat:
 
 ### Conceptes
 
+**Sintonia**: Música a l'inici o al final d'un programa de ràdio o televisió i que l'identifica entre els demés.
+
 **Jingles**: Melodies compostes per als anuncis publicitaris.
 
 **Eslògan**: Titular de l'anunci, frase breu i en llenguatge viu i directe que tractea de resumir el missatge d'una manera que impacte l'espectador.
