--- a/05_mu/md/04_ud04.md
+++ b/05_mu/md/04_ud04.md
@@ -65,4 +65,10 @@ A **intenet** es poden trobar partitures de molts tipus, des d'una tablatura de 
 Un **auditori** és un espai destinat a celebrar-hi concerts, recitals, conferències, col·loquis o altres actes, dirigits al públic.
 
 
+## 6. Famílies d'instruments
+
+1. **Instruments de corda**: Grup més nombrós. Es produeix el so al fregar la corda amb un arc, a excepció de l'arpa i la guitarra.
+2. **Instrumentes de vent**: Es produeix en posar en vibració una columna d'aire a l'interior d'un tub, mitjançant forats que es tapen amb els dits.
+3. **Instruments de percussió**: Es divideixen en dos grups. *Instruments de so determinat* (xilòfon o timbal), que poden ser afinats o *instruments de so indeterminat* els quals no fan cap nota.
+
 
