--- a/01_gh/06_unit/md/03.md
+++ b/01_gh/06_unit/md/03.md
@@ -1,3 +1,29 @@
 \newpage
 
+# 3. El govern dels regnes de la Corona d’Aragó #
+
+La Corona d’Aragó es va establir com una monarquia en la qual cada territori (Aragó, Catalunya, València i Mallorca) tenia les seues pròpies institucions i lleis.
+
+El monarca era rei de tots els territoris, però havia de jurar lleialtat i respectar les lleis i els furs de cada un.
+
+## 3.1. Una Corona, uns quants regnes ##
+
+El monarca va establir el **pactisme**, mitjançant el qual el rei va acceptar compartir l’elaboració de llis amb les Corts i respectar els privilegis dels tres braços.
+
+Les institucions de govern prinipals de la Corona d’Aragó eren:
+
+- **Cort Reial**: el rei i els seue consellers. Vivien al palau de Barcelona.
+- **Lloctinyent general** o **virrei**: representant del rei en cada regne.
+- **Cort General** o **Corts** de cada regne: Aragó, Catalunya i València.
+- **Generalitat** o **Diputació del General**: comissió permanet de les Corts pròpia de cada regne. Recaptava impostos, organitzava l’exèrcit i feia complir les lleis. La **Generalitat de València** es va crear a les Corts del 1418 i va assumir la defensa dels Furs i el control del rei.
+- Mallorca es regia pel **Gran i General Consell**: representants de tota l’illa.
+- A Aragó el **justícia major** feia de mediador en els pugnes i dles diferències entre el rei i la noblesa.
+
+## 3.2. Funcions de la Cort General ##
+
+Les Corts Genrals o Corts eren la reunió dels tres braços: eclesiàstic, nobiliari i pla o comú (format pels representants de les ciutats amb dret a Corts).
+
+Les convocava el rei i tenien un caràcter temporal, una vegada tracts els assumptes es dissolien.
+
+La **funció** de les Corts consistia en aprovar nous impostos (**subsidis**).
 
