--- a/01_gh/06_unit/md/04.md
+++ b/01_gh/06_unit/md/04.md
@@ -1,3 +1,24 @@
 \newpage
 
+# 4. Expansió de la Corona d’Aragó (segles XIII-XV) #
 
+## 4.1. L’expansió mediterrània ##
+
+- Expansió pel mediterrani mitjançant **almogàvers** (mercenaris).
+
+## 4.2. Economia pròspera ##
+
+- En les zones de l’interior l’**agricultura** era l’activitat més important.
+- Bona part de la producció es va dedicar a l’**exportació** i el **comerç** va estar l’activitat més important.
+
+## 4.3. Creixement de la burgesia ##
+
+- Amb el comerç va aparèixer la burgesia urbana, que demanava més poder.
+- Per governar les ciutats com València es van crear els **Consells**, de caràcter consultiu, que integraven els representants de tots els estaments.
+- Les decisions més improtants requeien en els **jurats** que eren magistrats elegits anualment pels patricis urbans (mercaders rics, banquers i nobles).
+
+## 4.4. Els consolats del mar ##
+
+Es van convertir en els tribunals que resolien els problemes relacinats amb l’activitat comercial, que hi havia entre els mercaders i les autoritats.
+
+El comerç es regia pel *Llibre del Consolat del Mar*, una recopilació de normes jurídiques comercials.
