--- a/01_gh/06_unit/md/05.md
+++ b/01_gh/06_unit/md/05.md
@@ -1,3 +1,10 @@
 \newpage
 
+# 5. El comerç #
+
+## 5.1. La preparació del viatge ##
+
+## 5.2. L’arribada a ports llunyans ##
+
+## 5.3. La tornada a València ##
 
