--- a/01_gh/06_unit/md/06.md
+++ b/01_gh/06_unit/md/06.md
@@ -1,3 +1,49 @@
 \newpage
 
+# 6. El dinamisme del Regne de València #
+
+A partir del segle XIII, i sobretot durant el XIV, el Regne de València va viure una gran expansió econòmica, social i cultural.
+
+## 5.1. L’expansió agrícola i manufacturera ##
+
+La superfície agrícola cultivada va augmentar i les **terres de regadiu** es van ampliar.
+
+Es cultivaren **plantes industrials** (lli, cànem, espart i morera), productes per tenyir (grana i alquena) i espècies (pebre i safrà).
+
+Manufactura tèxtic, ceràmica i el paper.
+
+## 5.2. El comerç i les finances ##
+
+Al segle XV **València** es va convertir un centre de primer ordre en el **comerç** i les **finances internacionals**.
+
+## 5.3. Puixança cultural ##
+
+Segle XV, **segle d’or de les lletres valencianes**.
+
+En destaquem:
+
+- Ausiàs March, *Tirant lo Blanc*.
+- Isabel de Villena
+- Jaume Roig, *L’espill*.
+- 1499 es crea la Universitat de València, anomenada Estudi General.
+
+## 5.4. La ciutat de València, una gran capital mediterrània ##
+
+Construccions del gòtic civil:
+
+- La torre del Miquelet
+- La seu
+- Les torres de Quart
+- Les drassanes
+- L’Hospitat General primitiu
+- La Llotja de la Seda
+- El palau de la Generalitat
+
+Creixement urbà:
+
+- Muralles
+- Portes
+- Carrers estrets, atzucacs
+- Barri musulmà: moreria
+- Barri jueu: call
 
