--- a/01_gh/06_unit/md/07.md
+++ b/01_gh/06_unit/md/07.md
@@ -1,3 +1,27 @@
 \newpage
 
+# 7. La Corona de Castella #
+
+L’any 1230 es va produir la unió definitiva dels regnes de Lleó i Castella.
+
+## 7.1. Govern del regne ##
+
+- **Cúria Règia**: tasques de govern. Formada per nobles. Organisme consultiu d’on sorgeixen les **Corts**.
+- **Hisenda**: recaptació d’impostos.
+- **Cancilleria**: Organització del regne.
+- **Audiència**: Administració jurídica.
+
+Els municipis eren administrats pels ajuntamentes, la major dels quals eren controlats per la noblesa (regidors). Per exercir el seu control sobre els municipis, la monarquia va anomenar representants en el govern municipal: els **corregidors**.
+
+## 7.2. Una economia ramadera ##
+
+La majoria de la població es dedicava a l’agricultura.
+
+L’activitat econòmica més important va ser la **ramaderia ovina** de raça merina.
+
+Els grans ramats d’ovelles eren propietat de la noblesa, les ordres militars i els grans monestirs. Per protegir els seus interessos i organitzar las transhumància, els monarques van crear l’**Honrado Conceo de la Mesta** (1273).
+
+## 7.3. La societat estamental **
+
+Durant el segle XIV, es va consolidar una **societat** amb **grans diferències** entre **privilegiats** (noblesa i clero) i **no-privilegiats** (camperorls al camp i artensan i comerciants en les ciutats).
 
