--- a/01_gh/06_unit/md/07.md
+++ b/01_gh/06_unit/md/07.md
@@ -21,7 +21,7 @@ L’activitat econòmica més important va ser la **ramaderia ovina** de raça m
 
 Els grans ramats d’ovelles eren propietat de la noblesa, les ordres militars i els grans monestirs. Per protegir els seus interessos i organitzar las transhumància, els monarques van crear l’**Honrado Conceo de la Mesta** (1273).
 
-## 7.3. La societat estamental **
+## 7.3. La societat estamental ##
 
 Durant el segle XIV, es va consolidar una **societat** amb **grans diferències** entre **privilegiats** (noblesa i clero) i **no-privilegiats** (camperorls al camp i artensan i comerciants en les ciutats).
 
