--- a/01_gh/06_unit/md/00.md
+++ b/01_gh/06_unit/md/00.md
@@ -1,5 +1,5 @@
 % 2n ESO - Història
-% Unitat 5. Les ciutats a Europa Medieval
+% Unitat 6. Del Regne de València a la Corona d'Aragó
 % https://llagosti.wordpress.com
 
 \newpage
