--- a/01_gh/06_unit/md/02.md
+++ b/01_gh/06_unit/md/02.md
@@ -4,7 +4,7 @@
 
 Jaume I va decidir avançar per la Península a partir de la batalla de **Las Navas de Tolosa**.
 
-Havent conquistat el territori valencià, els catalans en van repoblar el litorl, i els aragonesos, interior. La majoria de població musulmana va decidir quedar-se i treballar al campcom a serfs (mudèjars).
+Havent conquistat el territori valencià, els catalans en van repoblar el litoral, i els aragonesos, interior. La majoria de població musulmana va decidir quedar-se i treballar al campcom a serfs (mudèjars).
 
 ## 2.1. La reconquesta del territori valencià ##
 
@@ -16,7 +16,7 @@ Ocupació:
 
 - 1232 Morella i Borriana
 - 1238 València
-- 1245 Castell de Biar. La signatura del tractat d’Almirrra va acabar la idsputa i va establir les fronteres del Regne de València, que va quedar incorporat a la Corona d’Aragó.
+- 1245 Castell de Biar. La signatura del tractat d’Almirra va acabar la disputa i va establir les fronteres del Regne de València, que va quedar incorporat a la Corona d’Aragó.
 - 1296 Jaume II va conquistar el Regne de Múrcia, que pertanya a Castella. Un nou tractat, **Torrellas** (1204) entre la Corona d’Aragó i Castella va establir que les comarques d’Alacant, Elx i Oriola quedarien annexades al Regne de València, mentre que la resta del reialme murcià va continuar en el Regne de Castella.
 
 ## 2.2. El repartiment  de les terres conquistades ##
@@ -25,7 +25,7 @@ El territori conquistat es va repartir de manera proporcional a les aportacions 
 
 En pagament dels serveis van rebre castells i grans alqueries que van conformar senyories extenses.
 
-Per a evitar que els senyors tingueren massa poder, el rei es va reservar el control de lamajoria d’ortes del litoral i de les ciutats més impforants, especialment de València, a la qual va atorgar un codi de lleis i privilegis anomenat **Furs**.
+Per a evitar que els senyors tingueren massa poder, el rei es va reservar el control de la majoria d’ortes del litoral i de les ciutats més imporants, especialment de València, a la qual va atorgar un codi de lleis i privilegis anomenat **Furs**.
 
 Aquests **Furs de València** (1239-1240) es van aplicar posteriorment  tot el territori valencià.
 
@@ -37,6 +37,6 @@ Els llauradors es van concentrar en **poblats** o **viles**.
 
 La meitat de la població vivia a les terres del rei.
 
-Els musulmans que van decidir no marxar del Regne de València (mudèjars) eren sobretot camperols. A tots els cvan arrabassar les casses i les hortes i els van desplaçar de les fèrtils terres del litoral a les zones de l’interior, més pobres.
+Els musulmans que van decidir no marxar del Regne de València (mudèjars) eren sobretot camperols. A tots els van arrabassar les cases i les hortes i els van desplaçar de les fèrtils terres del litoral a les zones de l’interior, més pobres.
 
 A València i a Xàtiva van continuar treballant d’artesans, però reclosso en barris separats (**moreries**).
