--- a/01_gh/06_unit/md/01.md
+++ b/01_gh/06_unit/md/01.md
@@ -11,7 +11,7 @@ Aquesta batalla va ser important perquè:
 
 ### 1.1.1. Segle XIII ###
 
-- Victòria en la batalla de Las Navas de Tolosa: les tropes castellanes van passar Sierra Morena i avaç per les valls del Guadiana i del Guadalquivir.
+- Victòria en la batalla de Las Navas de Tolosa: les tropes castellanes van passar Sierra Morena i avanç per les valls del Guadiana i del Guadalquivir.
 - Ràpida conquesta dels territoris musulmans.
 
 ### 1.1.2. Segle XIV ###
