--- a/01_gh/07_unit/md/00.md
+++ b/01_gh/07_unit/md/00.md
@@ -4,6 +4,10 @@
 
 \newpage
 
-# Introducció #
+# 0. Introducció #
 
-
+- Segle XV i XVI varen ser de gran dinamisme.
+- Nova manera de pensar: Humanisme.
+- Gustos artistics nous: Renaixement.
+- Princeps, eclesiàstics i burguesis es varen convertir en mecenes.
+- Nova religiositat va fragmentar la comunitat cristiana: Reforma protestant.
