--- a/01_gh/09_unit/md/01.md
+++ b/01_gh/09_unit/md/01.md
@@ -1,15 +1,36 @@
-% 2n ESO - Història
-% Unitat 9. L'imperi dels Austria
-% https://llagosti.wordpress.com
+\newpage
 
-0. Com es fa formar i es va organitzar l'imperi dels Àustria?
+# 1. Com es va formar i governar l'Imperi hispànic #
 
-- **Segle XVI**: els monarques de la dinastia Habsburg (els "Austria") van governar un gran imperi que s'estenia per Europa i Amèrica.
-- **Segle XVII**: l'imperi va entrar en decadència.
+## A. Carles I, un Imperi universal ##
 
-Causes:
+1519: Va ser proclamat emperador del Sacre Imperi romanogermanic i reconegut com a **Carles V d'Alemanya**.
 
-- Endeutament de la Hisenda pública
-- Monarques ineficaços
-- Mentalitat que no premiava ni l'esforç
+- Les monarquies europees es van sentir amenaçades.
+- Rivalitat religiosa amb le luterarnisme, que es va estender pels Estats alemanys.
+
+El seu allunyament del bovern peninsular va suscitar recils per no ocupar-se dels assumptes interns.
+
+> El **Sacre Imperi romanogermanic** era la continuitat de la concepció medieval d'una Europa que unia tota la crinstiandat sota dos poders: un de terrenal (l'emperador) i un altre d'espiritual (el papat).
+	
+## B. Felip II, un Imperi hispànic ##
+
+1556: Carles I va **abdicar** en son fill Felip II.
+
+1580: Felip II va incorporar el **regne de Portugal** a la corona de Castella.
+
+Felip II:
+
+- Va fomentar la **potència econòmica** i militar de Castella.
+- Va defensar la **Contrareforma**.
+
+Va recolzar les instrucccions de govern directament controlades per al monarquia:
+
+- El rei convocava les Corts per aprovar nous impostos, però governava directametne amb ajuda de **cancellers** o **secretaris** i dels **consell d'Estat**.
+- Comptava amb representació directa per un **virrei**. En ciutats castellanes un **corregidor**.
+
+Per dur a terme la burocràcia:
+
+- Va augmentar el nombre de **funcionaris**
+- Fa un **exèrcit professional**
 
